--- a/renovate.json
+++ b/renovate.json
@@ -21,16 +21,15 @@
       "groupName": "Mattermost Package Dependencies",
       "labels": ["package-deps"],
       "commitMessageTopic": "package-deps",
-      "matchDatasources": ["docker", "helm", "git-tags"],
-      "ignoreVersions": ["9995379"]
+      "matchDatasources": ["docker", "helm", "git-tags"]
     },
     {
       "groupName": "Mattermost Package Dependencies",
       "labels": ["package-deps"],
       "commitMessageTopic": "package-deps",
       "matchDatasources": ["docker"],
-      "matchPackagePatterns": ["<package-name>"],
-      "ignoreVersions": ["9995379"]
+      "matchPackagePatterns": ["mattermost/mattermost-enterprise-edition"],
+      "allowedVersions": "/^\\d+\\.\\d+\\.\\d+$/"
     },
     {
       "groupName": "Mattermost Package Dependencies",
