--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,8 @@
       "groupName": "Mattermost Package Dependencies",
       "labels": ["package-deps"],
       "commitMessageTopic": "package-deps",
-      "matchDatasources": ["docker", "helm", "git-tags"]
+      "matchDatasources": ["docker", "helm", "git-tags"],
+      "packagePatterns": ["*"]
     },
     {
       "groupName": "Mattermost Package Dependencies",
@@ -29,13 +30,6 @@
       "commitMessageTopic": "package-deps",
       "matchPackageNames": ["mattermost/mattermost-enterprise-edition"],
       "allowedVersions": "/^\\d+\\.\\d+\\.\\d+$/"
-    },
-    {
-      "groupName": "Mattermost Package Dependencies",
-      "labels": ["package-deps"],
-      "commitMessageTopic": "package-deps",
-      "matchPackageNames": ["https://repo1.dso.mil/big-bang/product/packages/mattermost.git"],
-      "allowedVersions": "/.+-bb.+/"
     }
   ]
 }
